refactor: syntax refactoring...